# heart-transplant

./: .gitignore  AGENTS.md  PROJECT.md  README.md  package.json  run-hard-gates.cmd  run-hard-gates.ps1
backend/: package.json  pyproject.toml
backend/docs/evals/: gold_block_benchmark.json
backend/src/: repo-architect-core.mjs  scan-server.mjs
backend/src/heart_transplant/: __init__.py  artifact_manifest.py  artifact_store.py  beta_api.py  beta_runtime.py  blast_radius.py  canonical_graph.py  cli.py  continue_mcp.py  demo.py  evidence.py  graph_integrity.py  graph_smoke.py  mcp_server.py  models.py  ontology.py  paper_checklist.py  phase_metrics.py  repro_manifest.py  scip_consume.py  scip_typescript.py  training.py  validation_gates.py
backend/src/logic/: artifact-store.mjs  fact-extractor.mjs  ignore-catalog.mjs  ingest-runner.mjs  migration-planner.mjs  rule-engine.mjs  scan-validator.mjs
backend/tests/: test_artifact_manifest.py  test_beta_runtime.py  test_causal_overlay.py  test_corpus_gate.py  test_evidence_benchmark.py  test_gold_benchmark.py  test_graph_integrity.py  test_graph_queries.py  test_graph_smoke.py  test_ingest.py  test_logiclens_demo.py  test_logiclens_paper_path.py  test_maximize_gates.py  test_maximize_report.py  test_phase_10_13.py  test_phase_metrics.py  test_quality_rails.py  test_scip_consume.py  test_scip_typescript.py  test_structural_spine.py  test_surface_status.py  test_surreal_phase3.py  test_temporal_scan.py  test_training_pipeline.py  test_validation_gates.py
backend/tests/fixtures/: block_gold.json
cli/: package.json
(+117 files in other folders)
